Specify sub-package for cov during tests

--- a/tox.ini
+++ b/tox.ini
@@ -7,14 +7,14 @@ passenv = *
 # setenv = PYTHONMALLOC = pymalloc
 #     PYTHONMALLOCSTATS = 'yes'
 commands=
-    pytest --cov=lz4 --cov-append --tb=long -l tests/block/test_block_0.py
-    pytest --cov=lz4 --cov-append --tb=long -l tests/block/test_block_1.py
-    pytest --cov=lz4 --cov-append --tb=long -l tests/block/test_block_2.py
-    pytest --cov=lz4 --cov-append --tb=long -l tests/frame/test_frame_0.py
-    pytest --cov=lz4 --cov-append --tb=long -l tests/frame/test_frame_1.py
-    pytest --cov=lz4 --cov-append --tb=long -l tests/frame/test_frame_2.py
-    pytest --cov=lz4 --cov-append --tb=long -l tests/frame/test_frame_3.py
-    pytest --cov=lz4 --cov-append --tb=long -l tests/frame/test_frame_4.py
-    pytest --cov=lz4 --cov-append --tb=long -l tests/frame/test_frame_5.py
-    pytest --cov=lz4 --cov-append --tb=long -l tests/frame/test_frame_6.py
-    pytest --cov=lz4 --cov-append --tb=long -l tests/frame/test_frame_7.py
+    pytest --cov=lz4.block --cov-append --tb=long -l tests/block/test_block_0.py
+    pytest --cov=lz4.block --cov-append --tb=long -l tests/block/test_block_1.py
+    pytest --cov=lz4.block --cov-append --tb=long -l tests/block/test_block_2.py
+    pytest --cov=lz4.frame --cov-append --tb=long -l tests/frame/test_frame_0.py
+    pytest --cov=lz4.frame --cov-append --tb=long -l tests/frame/test_frame_1.py
+    pytest --cov=lz4.frame --cov-append --tb=long -l tests/frame/test_frame_2.py
+    pytest --cov=lz4.frame --cov-append --tb=long -l tests/frame/test_frame_3.py
+    pytest --cov=lz4.frame --cov-append --tb=long -l tests/frame/test_frame_4.py
+    pytest --cov=lz4.frame --cov-append --tb=long -l tests/frame/test_frame_5.py
+    pytest --cov=lz4.frame --cov-append --tb=long -l tests/frame/test_frame_6.py
+    pytest --cov=lz4.frame --cov-append --tb=long -l tests/frame/test_frame_7.py
